--- a/ventus/src/scss/_variables.scss
+++ b/ventus/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 $header_background_color: #fcfcfc;
+$card_background_color: #fdfdfd;
 $border_color: #efefef;
-$shadow_color: #e6e6e6;
+$shadow_color: rgba(0,0,0,0.11);
 
 $primary_light: #517193;
 $primary_dark: #44647D;
