Add Register page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $header_background_color: #fcfcfc;
 $card_background_color: #fdfdfd;
 $border_color: #efefef;
 $shadow_color: rgba(0,0,0,0.11);
+$shadow_color_dark: rgba(0,0,0,0.16);
 
 $primary_light: #517193;
 $primary_dark: #44647D;
@@ -9,3 +10,5 @@ $primary_darker: #324D5C;
 $accent_teal: #46B29D;
 $accent_yellow: #FEB74E;
 $accent_orange: #FFAD6F;
+
+$error: #B71C1C;
