Add Categories and Interests subpages

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,5 +11,7 @@ $accent_teal: #46B29D;
 $accent_yellow: #FEB74E;
 $accent_orange: #FFAD6F;
 
+$color_list: $accent_yellow, $accent_orange, $primary_light;
+
 $error: #B71C1C;
 $error_light: $accent_orange;
