CSS fixes + font change (fixes #1 and #5)

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,3 +15,15 @@ $color_list: $accent_yellow, $accent_orange, $primary_light;
 
 $error: #B71C1C;
 $error_light: $accent_orange;
+
+$form_font: 'Baloo Da 2';
+$form_font_weight: 600;
+$form_font_size: 19px;
+
+
+$card_header: 20px;
+$card_details: 16px;
+$progress_label_size: 16px;
+$progress_label_size_profile: 18px;
+
+$header_profile_size: 21px;
