--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -2,9 +2,11 @@
     color: nth($color_list, $index);
     border-color: nth($color_list, $index);
 }
+
 @mixin get-background($index) {
     background-color: nth($color_list, $index);
 }
+
 @mixin children-colors {
     @for $i from 1 through length($color_list) {
       &:nth-child(#{length($color_list)}n + #{$i}) > .switch-input:checked ~ .switch-label{
@@ -14,4 +16,464 @@
         @include get-color-border($i);
       }
     }
+}
+
+@mixin input-styling {
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+      display: none; 
+      -webkit-appearance: none!important;
+      margin: 0; 
+  }
+  input[type=number] {
+      -moz-appearance:textfield; 
+  }
+  button::-moz-focus-inner {
+    border: 0;
+  }
+  .form .input-wrapper{
+    box-sizing:border-box;
+    width:100%;
+    height: 50px;
+    position: relative;
+    margin-top:20px;
+    margin-bottom:15px;
+  }
+  span > a, span > a:visited{
+    color:$primary_light;
+  }
+  .input-wrapper > input{
+    box-sizing:border-box;
+    position:relative;
+    width:100%;
+    height:100%;
+    top:0;
+    right:0;
+    left:0;
+    bottom:0;
+    background:transparent;
+    padding:2px;
+    padding-top:3px;
+    padding-left:15px;
+    padding-right:40px;
+    border-radius:5px;
+    border:2px solid $border_color;
+    color: $primary_light;
+    font-size:$form_font_size;
+    font-family:$form_font;
+    font-weight:$form_font_weight;
+    outline:none;
+    box-shadow:none;
+    transition:all 200ms;
+  }
+  .input-wrapper > span {
+    padding:15px;
+    padding-top:10px;
+    position:absolute;
+    left:0;
+    top:0;
+    transition: all 200ms cubic-bezier(0.25, 0.1, 0.25, 1);
+    font-size:$form_font_size;
+    font-family:$form_font;
+    font-weight:$form_font_weight;
+    color:$primary_light;
+    opacity:0.7;
+    pointer-events:none;
+  }
+  .input-wrapper > input::placeholder{
+    color:$primary_light;
+    opacity:0.7;
+  }
+  .input-wrapper > input:focus, .input-wrapper > input:not(:placeholder-shown){
+    border-width:4px;
+  }
+  .form input:valid{
+    border-color: $primary_light;
+    color: $primary_light;
+  }
+  .form input:invalid{
+    border-color:$accent_orange;
+    color: $accent_orange;
+  }
+  .input-wrapper > input:placeholder-shown{
+    border:2px solid $border_color;
+    color: $primary_light;
+  }
+  .input-wrapper >  i.material-icons{
+    opacity:0;
+    position:absolute;
+    right:15px;
+    top:50%;
+    transform:translateY(-50%);
+    color:transparent;
+    transition: opacity 200ms;
+    transition-delay:100ms;
+    pointer-events:none;
+    user-select:none;
+    z-index:-1;
+  }
+  input:valid ~ .ok{
+    opacity:0.8;
+    color: $primary_light;
+    transition-delay:0ms;
+  }
+  input:invalid ~ .error{
+    opacity:1;
+    color: $accent_orange;
+    transition-delay:0ms;
+  }
+  input:placeholder-shown ~ .ok,input:placeholder-shown ~ .error{
+    opacity:0;
+  }
+  .form input:valid:not(:placeholder-shown), .form input:valid:not(:placeholder-shown) + span{
+    border-color: $primary_light;
+    color: $primary_light;
+  }
+  .form input:invalid:not(:placeholder-shown),.form input:invalid:not(:placeholder-shown) + span{
+    border-color:$accent_orange;
+    color: $accent_orange;
+  }
+  .input-wrapper > input:focus + span, .input-wrapper > input:not(:placeholder-shown) + span {
+    opacity:1;
+    padding-left:10px;
+    margin-top:3px;
+    transform-origin:center left;
+    transform: scale(0.75) translateY(-100%);
+  }
+  .form > .half{
+    max-width:calc(50% - 15px);
+  }
+  .form > .input-multiple-wrapper{
+    display:flex;
+    flex-flow: row nowrap;
+    align-content:center;
+    align-items:center;
+    justify-content: space-between;
+    box-sizing:border-box;
+    width:100%;
+    height: 50px;
+    position: relative;
+    margin-top:15px;
+    margin-bottom:15px;
+  }
+  .input-multiple-wrapper span{
+    padding:8px;
+    display:inline-block;
+    font-size:$form_font_size;
+    font-family:$form_font;
+    font-weight:$form_font_weight;
+    line-height:1.2;
+    color:$primary_light;
+  }
+  .spin {
+    animation-name: spin;
+    animation-duration:1000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+  }
+}
+
+@mixin checkbox-input-styling{
+  .form > .checkbox-wrapper{
+    margin-top:20px;
+    margin-bottom:15px;
+    padding-left:20px;
+    padding-right:20px;
+  }
+  .checkbox-wrapper > span{
+    color:$primary_dark;
+    font-size:18px;
+    font-family:$form_font;
+    font-weight:500;
+    padding-left:0;
+  }
+  .checkbox {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 30px;
+  }
+  .checkbox input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    border-radius: 34px;
+    transition: .4s;
+  }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 28px;
+    width: 28px;
+    left: 1px;
+    bottom: 1px;
+    background-color: white;
+    border-radius: 50%;
+    transition: .4s;
+  }
+  input:checked + .slider {
+    background-color: $primary_light;
+  }
+  input:checked + .slider:before {
+    transform: translateX(20px);
+  }
+}
+
+@mixin switch-input-styling{
+  .switch {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    box-sizing:border-box;
+    overflow:hidden;
+  }
+  .switch-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    box-sizing:border-box;
+    padding: 0;
+    margin: 15px 0 0;
+  }
+  .switch-label {
+    position: relative;
+    display: block;
+    height: inherit;
+    font-size:$form_font_size;
+    font-family:$form_font;
+    font-weight:$form_font_weight;
+    border-radius: inherit;
+    box-sizing:border-box;
+    transition: All 0.3s ease;
+  }
+  .switch-label:before, .switch-label:after {
+    position: absolute;
+    transition: inherit;
+    box-sizing:border-box;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding-top:10px;
+    border-radius:5px;
+  }
+  .switch-label::before {
+    content: attr(data-off);
+    color: white;
+    background: $primary_light;
+    backface-visibility: hidden;
+  }
+  .switch-label::after {
+    content: attr(data-on);
+    opacity: 0;
+    color: white;
+    background: $primary_light;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+  }
+  .switch-input:checked ~ .switch-label {
+    background: #FFF;
+  }
+  .switch-input:checked ~ .switch-label::before {
+    opacity:0;
+    transform: rotateY(180deg);
+  }
+  .switch-input:checked ~ .switch-label::after {
+    opacity:1;
+    transform: rotateY(0);
+  }
+}
+
+@mixin file-input-styling{
+  .inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+  }
+  .inputfile + label {
+    color: $primary_light;
+    background-color: white;
+    height:100%;
+    box-sizing:border-box;
+    font-family:$form_font;
+    font-weight:$form_font_weight;
+    font-size:18px;
+    border:2px solid $primary_light;
+    border-radius:5px;
+    padding-left:16px;
+    padding-right:16px;
+    align-items:center;
+    display:flex;
+    transition:all 300ms;
+    white-space:nowrap;
+  }
+  .inputfile:focus + label,
+  .inputfile + label:hover {
+    color:white;
+    background-color: $primary_light;
+  }
+  .inputfile + .accepted {
+    color:white;
+    background-color: $accent_teal;
+    border-width:0px;
+  }
+  .inputfile + label {
+    cursor: pointer;
+  }
+}
+
+
+@mixin login-button-styling {
+  .form > button{
+    width:auto;
+    display: flex;
+    align-items:center;
+    align-content:center;
+    justify-content:center;;
+    width:50%;
+    min-width:100px;
+    height:0;
+    border:2px solid $primary_light;
+    border-radius: 40px;
+    background-color: $primary_light;
+    color: #fff;
+    cursor:pointer;
+    margin:auto;
+    margin-top:0;
+    transform:scale(0);
+    opacity:0;
+    transform-origin:top center;
+    outline:none;
+    pointer-events:none;
+    transition: all 250ms;
+  }
+  .form > button:hover{
+    transform:scale(1.05);
+  }
+  .form > button > i.material-icons{
+    justify-self:center;
+    align-self:center;
+    padding:5px;
+  }
+  .form > button > span{
+    font-size:$form_font_size;
+    font-family:$form_font;
+    font-weight:500;
+    margin-top:2px;
+  }
+  .login{
+    color:white;
+    background-color:$primary_light;
+    border-color:$primary_light;
+  }
+  .register{
+    color:$primary_light;
+    background-color:transparent;
+    border-color:$primary_light;
+  }
+  .form > button:not(:disabled){
+    margin-top:32px;
+    height:40px;
+    opacity:1;
+    transform-origin:top center;
+    transform: scale(1);
+    pointer-events:all;
+}
+}
+
+@mixin register-button-styling {
+  .form > button{
+    width:100%;
+    height:50px;
+    display: inline-block;
+    border:2px solid $primary_light;
+    border-radius: 50px;
+    background-color: $primary_light;
+    color: #fff;
+    cursor:pointer;
+    font-size:25px;
+    font-weight:400;
+    transition:all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) 250ms;
+    opacity:0;
+    height:0;
+    width:0;
+    margin:-10px auto;
+    pointer-events:none;
+    outline:none;
+    font-family: 'Material Icons'
+  }
+  .form > button:hover{
+    transition-delay:0ms;
+    transform:scale(1.04);
+  }
+  .form > button.visible{
+    pointer-events:all;
+    opacity:1;
+    height:50px;
+    width:100%;
+    padding: 10px 20px;
+    margin-top:30px;
+  }
+}
+
+@mixin error-styling{
+  .errormsg{
+    position:fixed;
+    left:0;
+    right:0;
+    top:0;
+    height:60px;
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-content: center;
+    background: $error_light;
+    color:white;
+    transition:all 250ms;
+    z-index:99999;
+  }
+  .errormsg > span{
+    position:relative;
+    margin:auto;
+    font-family:$form_font;
+    font-weight:500;
+    font-size:28px;
+  }
+  .er-enter-active, .er-leave-active {
+    height:60px;
+    opacity:1;
+  }
+  .er-enter, .er-leave-to{
+    height:0;
+    opacity:0.5;
+  }
+}
+@mixin error-bottom{
+  div.errormsg {
+    bottom:0!important;
+    top:auto!important;
+  }
 }
